# json-summarizer

./: pyproject.toml
json_summarizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
summarizer/: __init__.py  bart_ai.py  extractive.py  metrics_llm_eval.py  pipeline.py  raman.json
