[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-summarizer"
version = "0.1.0"
description = "A pipeline to summarize and evaluate JSON histories"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "bert-score",
    "textstat",
    "nltk"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["summarizer*"]

[project.scripts]
json-summarizer = "summarizer.pipeline:run_pipeline"
